feat: test i18next

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -2,6 +2,8 @@
   "translation": {
     "home": "home",
     "changeLanguage": "change language",
-    "currentLanguage": "current language"
+    "currentLanguage": "current language",
+    "nb": "norwegian",
+    "en": "english"
   }
 }
