--- a/src/locale/nb.json
+++ b/src/locale/nb.json
@@ -2,6 +2,8 @@
   "translation": {
     "Home": "Hjem",
     "changeLanguage": "endre språk",
-    "currentLanguage": "nåværende språk"
+    "currentLanguage": "nåværende språk",
+    "nb": "norsk",
+    "en": "engelsk"
   }
 }
