Update translation files

--- a/src/locale/english/translation.json
+++ b/src/locale/english/translation.json
@@ -8,6 +8,37 @@
     "changeLanguage": "change language",
     "currentLanguage": "current language",
     "nb": "norwegian",
-    "en": "english"
+    "en": "english",
+    "contactInfoHeader": "Contact Info",
+    "contactInfoMessagePart1": "Do you have any questions regarding the website, or would you like to add coordinates and weather data for more locations?<br>",
+    "contactInfoEmail": "Do not hesitate to contact. Send an email to: <0>{{email}}</0>",
+    "contactInfoMessagePart2": "I will answer you as soon as possible.",
+    "changeStyleTheme": "Change style theme for web application",
+    "norwegian": "Norwegian",
+    "english": "English",
+    "weatherDataFromOpenWeatherMap": "Weather data from OpenWeatherMap",
+    "updatedDataStoredInAzure": "The weather data is fetched from OpenWeatherMap once per hour and stored in Azure Blob Storage",
+    "aboutPageHeader": "Welcome to Kitespots.no - Your guide to Kitesurfing in Rogaland",
+    "aboutPageTextSection1": "Kitespots.no is created with a passion for kitesurfing and technology. This non-commercial project serves as a living laboratory for web development, where I as a developer can experiment and improve my skills with various technologies. The project is open source and the source code is freely available for anyone who wants to contribute or learn. Here is the link to the GitHub repository: <0>kitespots-react-ui</0>",
+    "aboutPageTextSection2": "At Kitespots.no, you'll find updated weather reports specifically tailored for beaches in Rogaland suitable for kitesurfing. With a simple click on the coordinates in the interactive map, you can explore weather data from the various beaches, and see detailed forecasts for wind strength, gusts, precipitation, and wind direction – everything you need to plan your next kitesurfing session.",
+    "aboutPageTextSection3": "Updated weather data is fetched hourly from <0>Meteomatics</0> which excels with its precise weather information, delivered through a user-friendly API. With data from a variety of different sources, they ensure accuracy that is essential for kitesurfing. This ensures that the information you receive is not only accurate, but as current as possible",
+    "aboutPageTextSection4": "<0>Stavanger Kiteklubb</0> has provided valuable contributions through their analysis of the beaches, where they have given scores for suitability for beginners, freestyle, and wave kiting. Their detailed work also includes pictures of all the beaches with an overview of how different wind directions affect conditions for kiting. To assist in your assessment of wind conditions, categories describing the wind directions have been implemented. These categories are intuitively color-coded, making it easy for you to assess whether conditions are optimal for kiting.",
+    "aboutPageTextSection5": "I hope Kitespots.no becomes a useful tool for you to explore, plan, and enjoy your time on the water along the fantastic beaches of Rogaland.",
+    "windDirection": "Wind Direction",
+    "windAndRain": "Wind & Rain",
+    "gust": "Gust",
+    "wind": "Wind",
+    "windSpeed": "Wind Speed",
+    "rain": "Rain",
+    "sideOnshore": "Side Onshore - Ideal",
+    "onshore": "Onshore - Hard for beginners",
+    "overLand": "Over Land - Gusty",
+    "sideOffshore": "Side Offshore - Dangerous",
+    "offshore": "Offshore - Very dangerous",
+    "beginner": "Beginner",
+    "freestyle": "Freestyle",
+    "wave": "Wave",
+    "degrees": "Degrees",
+    "description": "Description"
   }
 }
